begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.yarn.csi.adaptor
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|csi
operator|.
name|adaptor
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|GetPluginInfoResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|impl
operator|.
name|pb
operator|.
name|GetPluginInfoRequestPBImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|impl
operator|.
name|pb
operator|.
name|GetPluginInfoResponsePBImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|CsiAdaptorProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Assert
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_comment
comment|/**  * Verify the integrity of GetPluginInfoRequest and GetPluginInfoResponse.  */
end_comment

begin_class
DECL|class|TestGetPluginInfoRequestResponse
specifier|public
class|class
name|TestGetPluginInfoRequestResponse
block|{
annotation|@
name|Test
DECL|method|testGetPluginInfoRequestPBRecord ()
specifier|public
name|void
name|testGetPluginInfoRequestPBRecord
parameter_list|()
block|{
name|CsiAdaptorProtos
operator|.
name|GetPluginInfoRequest
name|requestProto
init|=
name|CsiAdaptorProtos
operator|.
name|GetPluginInfoRequest
operator|.
name|newBuilder
argument_list|()
operator|.
name|build
argument_list|()
decl_stmt|;
name|GetPluginInfoRequestPBImpl
name|pbImpl
init|=
operator|new
name|GetPluginInfoRequestPBImpl
argument_list|(
name|requestProto
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertNotNull
argument_list|(
name|pbImpl
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|requestProto
argument_list|,
name|pbImpl
operator|.
name|getProto
argument_list|()
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testGetPluginInfoResponsePBRecord ()
specifier|public
name|void
name|testGetPluginInfoResponsePBRecord
parameter_list|()
block|{
name|CsiAdaptorProtos
operator|.
name|GetPluginInfoResponse
name|responseProto
init|=
name|CsiAdaptorProtos
operator|.
name|GetPluginInfoResponse
operator|.
name|newBuilder
argument_list|()
operator|.
name|setName
argument_list|(
literal|"test-driver"
argument_list|)
operator|.
name|setVendorVersion
argument_list|(
literal|"1.0.1"
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|GetPluginInfoResponsePBImpl
name|pbImpl
init|=
operator|new
name|GetPluginInfoResponsePBImpl
argument_list|(
name|responseProto
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"test-driver"
argument_list|,
name|pbImpl
operator|.
name|getDriverName
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"1.0.1"
argument_list|,
name|pbImpl
operator|.
name|getVersion
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|responseProto
argument_list|,
name|pbImpl
operator|.
name|getProto
argument_list|()
argument_list|)
expr_stmt|;
name|GetPluginInfoResponse
name|pbImpl2
init|=
name|GetPluginInfoResponsePBImpl
operator|.
name|newInstance
argument_list|(
literal|"test-driver"
argument_list|,
literal|"1.0.1"
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"test-driver"
argument_list|,
name|pbImpl2
operator|.
name|getDriverName
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"1.0.1"
argument_list|,
name|pbImpl2
operator|.
name|getVersion
argument_list|()
argument_list|)
expr_stmt|;
name|CsiAdaptorProtos
operator|.
name|GetPluginInfoResponse
name|proto
init|=
operator|(
operator|(
name|GetPluginInfoResponsePBImpl
operator|)
name|pbImpl2
operator|)
operator|.
name|getProto
argument_list|()
decl_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"test-driver"
argument_list|,
name|proto
operator|.
name|getName
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"1.0.1"
argument_list|,
name|proto
operator|.
name|getVendorVersion
argument_list|()
argument_list|)
expr_stmt|;
block|}
block|}
end_class

end_unit

